force-app/main/default/objects/FSL__Criteria__c/fields/FSL__Criteria_Items__c.field-meta.xml
<CustomField>
    <fullName>FSL__Criteria_Items__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Criteria Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>