force-app/main/default/objects/FSL__Criteria__c/fields/FSL__Territories__c.field-meta.xml
<CustomField>
    <fullName>FSL__Territories__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territories</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>